# image-tagger

./: .editorconfig  .gitignore  .npmrc  .prettierrc  CLAUDE.md  LICENSE  PROJECT-CUSTOMISATION.md  PROJECT-CUSTOMIZATION.md  README.md  eslint.config.mjs  example-project.json  favicon-generator.js  install.bat  knip.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tailwind.config.ts
.claude/: settings.local.json
.github/: copilot-instructions.md
docs/: copilot-context.md  training-ui-design.md
public/projects/: README.md  example-project.json
src/app/: asset-actions.ts  asset-list.tsx  asset.tsx  globals.css  layout.tsx  no-content.tsx  page.tsx
src/app/[page]/: page.tsx
src/app/api/config/: route.ts
src/app/components/: README.md  all-tags.tsx  asset-actions.tsx  asset.tsx  debug-overlay.tsx  loader.tsx  new-input.tsx  no-content.tsx  sortable-tag.tsx  stable-layout.tsx  tag-input.tsx  tag-styles.ts  tag.tsx  top-shelf.tsx
src/app/components/asset/: README.md  asset-actions.tsx  asset-metadata.tsx  asset.tsx
src/app/components/auto-tagger/: auto-tagger-modal.tsx  auto-tagger-progress.tsx  auto-tagger-settings.tsx  auto-tagger-setup-modal.tsx  auto-tagger-summary.tsx  types.ts  use-auto-tagger.ts
src/app/components/bottom-shelf/: bottom-shelf.tsx  io-actions.tsx  loading-status.tsx
src/app/components/filter-list/: FiletypesView.tsx  README.md  SizesView.tsx  TagsView.tsx  file-types.tsx  filter-context.tsx  filter-list-context.tsx  filter-list.tsx  index.tsx  optimized-filter-context.tsx  optimized-filter-list.tsx  persistent-filter-context.tsx  tags.tsx  types.ts
src/app/components/pagination/: controls.tsx  pagination.tsx
src/app/components/project-list/: project-content.tsx  project-icon.tsx  project-item.tsx  types.ts
src/app/components/shared/: README.md
src/app/components/shelf/: bottom-shelf-frame.tsx  index.ts  shelf-info-row.tsx  shelf-toolbar-row.tsx  top-shelf-frame.tsx
src/app/components/shelves/: top-shelf.tsx
src/app/components/tag/: input-tag.tsx  sortable-tag.tsx  tag-context.tsx  tag-input.tsx  tag-styles.ts  tag.tsx
src/app/components/tagging/: README.md  caption-editor.tsx  editable-tag.tsx  index.ts  input-tag.tsx  optimized-tagging-context.tsx  sortable-tag.tsx  tag-list.tsx  tag.tsx  tagging-context.tsx  tagging-manager.tsx
src/app/components/tagging-v2/: README.md  index.ts  tagging-manager.tsx
src/app/components/tags/: tag.tsx
src/app/components/top-shelf/: top-shelf.tsx
src/app/components/training/: collapsible-section.tsx  training-toolbar.tsx  training-top-shelf.tsx  use-training-view-mode.ts
src/app/constants/: index.ts
src/app/project-list/: project-list.tsx
src/app/project-list/hooks/: use-project-list.ts
src/app/providers/: AppProvider.tsx  DataProvider.tsx  StoreProvider.tsx
src/app/services/auto-tagger/: index.ts  model-manager.ts  model-registry.ts  pending-tag-results.ts  tagging-controllers.ts  types.ts
src/app/services/config/: server-config.ts
src/app/store/: hooks.ts  index.ts  slice-assets.ts  slice-filters.ts  slice-tags.ts  utils.ts
src/app/store/jobs/: index.ts  (+2 more)
src/app/styles/: tag-styles.ts
src/app/tagging/: page.tsx
src/app/tags/: new-tag-input.tsx  new-tag.tsx  tag-actions.tsx  tag.tsx
src/app/training/: page.tsx
src/app/types/: image-asset.ts  load-state.ts
src/app/utils/: asset-actions.ts  category-utils.ts  filter-actions.ts  flex-wrap-sorting-strategy.ts  helpers.ts  image-sizes.ts  image-utils.ts  load-assets-client.ts  project-actions.ts  render-tracker.ts  scroll-to-anchor.ts  selector-perf.ts  store-provider.tsx  subfolder-utils.ts  test-bucketing.js  text-highlight.tsx  use-anchor-scrolling.ts  use-theme.ts
src/app/views/: asset-list.tsx  bottom-shelf.tsx  error.tsx  initial-load.tsx  no-content.tsx  project-content.tsx  project-icon.tsx  project-list.tsx  top-shelf.tsx
training-sidecar/: config.py  job_manager.py  main.py  models.py  pyproject.toml  requirements.txt  ws_manager.py
training-sidecar/captioning/: batch_manager.py  llama_cpp_provider.py  provider.py  transformers_provider.py
training-sidecar/providers/: ai_toolkit.py  base.py
workers/: onnx-tagger.js
(+442 files in other folders)
