[project]
name = "img-tagger-sidecar"
version = "0.1.0"
description = "Python sidecar for img-tagger — handles LoRA training orchestration and VLM captioning"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "websockets>=14,<15",
    "pydantic>=2.10,<3",
    "pyyaml>=6,<7",
    # VLM captioning backend — install on demand via the "vlm" extra once
    # we're ready to swap the mock provider. Keeping it optional means the
    # sidecar can run without a CUDA toolchain.
]

[project.optional-dependencies]
vlm = [
    # Install with: uv sync --extra vlm
    # Default: CPU wheels from abetlen's wheel index (cross-platform).
    # For Windows CUDA, you need to build from source:
    #   $env:CMAKE_ARGS = "-DGGML_CUDA=on"
    #   uv pip install --force-reinstall --no-cache-dir llama-cpp-python
    "llama-cpp-python>=0.3.0,<1",
]
# GPU VLM via HuggingFace transformers + PyTorch CUDA.
# Install with: uv sync --extra gpu
# Pulls PyTorch Windows CUDA 12.8 wheels from the official PyTorch index
# (see [tool.uv.sources] below).
gpu = [
    "torch>=2.5,<3",
    "torchvision>=0.20,<1",
    "transformers>=4.57,<5",
    "accelerate>=1.2,<2",
    "pillow>=10,<12",
    # Qwen2.5/3-VL processors use qwen-vl-utils for image loading helpers
    "qwen-vl-utils>=0.0.10,<1",
]

[tool.uv]
package = false

[tool.uv.sources]
llama-cpp-python = { index = "llama-cpp-cpu" }
# On Windows, pull torch/torchvision from the PyTorch CUDA 12.8 wheel index.
# Other platforms fall back to PyPI defaults, which works for Linux CUDA
# and macOS MPS. Marker scope avoids pulling CUDA wheels on Linux where
# users may want ROCm or CPU builds.
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "llama-cpp-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
